# tree-cli.rs

./: Cargo.toml  README.md
.github/: copilot-instructions.md
src/: file_size.rs  list_files.rs  main.rs  print.rs  tree.rs
