[package]
name = "ntree"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A tool to count files in directories"

[dependencies]
colored = "2.0.0"
rayon = "1.7"  # 用于并行计算
dashmap = "5.4.0"  # 线程安全的高性能哈希表
clap = { version = "4.4", features = ["derive"] }  # 添加clap依赖
regex = "1.9.5"  # 添加regex依赖

[profile.release]
opt-level = 3
debug = false
strip = true
lto = true
codegen-units = 1
panic = "abort"
